# Aiassistantbot

./: .dockerignore  .env.example  .replit  Dockerfile  Readme.md  app.py  config.py  docker-compose.yml  gemini_service.py  models.py  pyproject.toml  replit.md  telegram_bot.py
